<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/navigation_upcoming"
        android:icon="@drawable/ic_upcoming"
        android:title="@string/title_upcoming" />
    <item
        android:id="@+id/navigation_finished"
        android:icon="@drawable/ic_finished"
        android:title="@string/title_finished" />
    <item
        android:id="@+id/favoriteEventsFragment"
        android:icon="@drawable/ic_favorite"
        android:title="@string/title_favorite" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />

</menu>