<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailEventActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="visible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/mediaCover"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/event_name"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintTop_toBottomOf="@id/mediaCover"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="16dp" />

        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/event_description"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="16dp" />

        <TextView
            android:id="@+id/summary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/event_summary"
            app:layout_constraintTop_toBottomOf="@id/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="16dp" />

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/summary"
            app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="centerInside"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/category"
            app:layout_constraintTop_toBottomOf="@id/logoImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="16dp" />

        <TextView
            android:id="@+id/ownerName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/owner_name"
            app:layout_constraintTop_toBottomOf="@id/category"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="16dp" />

        <TextView
            android:id="@+id/cityName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/city_name"
            app:layout_constraintTop_toBottomOf="@id/ownerName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="16dp" />

        <TextView
            android:id="@+id/quota"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/quota"
            app:layout_constraintTop_toBottomOf="@id/cityName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="16dp" />

        <TextView
            android:id="@+id/registrants"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/registrants"
            app:layout_constraintTop_toBottomOf="@id/quota"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="16dp" />

        <TextView
            android:id="@+id/remainingQuota"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/remaining_quota"
            app:layout_constraintTop_toBottomOf="@id/registrants"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="16dp" />

        <TextView
            android:id="@+id/beginTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/begin_time"
            app:layout_constraintTop_toBottomOf="@id/remainingQuota"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="16dp" />

        <TextView
            android:id="@+id/endTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/end_time"
            app:layout_constraintTop_toBottomOf="@id/beginTime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="16dp" />

        <Button
            android:id="@+id/openLinkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_link"
            app:layout_constraintTop_toBottomOf="@id/endTime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/colorAccent"
            android:padding="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_link"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/openLinkButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
